fix handlers
